webinars/2024-06-25/lucky-dip/loser-setup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loser
  namespace: lucky-dip
  labels:
    app: loser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loser
  template:
    metadata:
      labels:
        app: loser
    spec:
      containers:
      - name: loser
        image: us-east1-docker.pkg.dev/envoy-gateway-demo-01/demo-images/loser:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: loser
  namespace: lucky-dip
  labels:
    app: loser
spec:
  ports:
    - port: 8080
  selector:
    app: loser
