webinars/2024-06-25/lucky-dip/lucky-dip-ratelimit.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy 
metadata:
  name: policy-httproute
  namespace: lucky-dip
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: lucky-dip
    namespace: lucky-dip
  rateLimit:
    type: Global
    global:
      rules:
      - clientSelectors:
        - sourceCIDR: 
            value: 0.0.0.0/0
            type: Distinct
        limit:
          requests: 50
          unit: Hour
