webinars/2024-06-25/lucky-dip/winner-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: winner-demo-miss-berg
  namespace: lucky-dip
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: shared-gateway
      name: shared-gateway
      sectionName: demo-miss-berg
  rules:
    - matches:
        - path:
            type: Exact
            value: /winner
      backendRefs:
        - group: ""
          kind: Service
          namespace: lucky-dip
          name: winner
          port: 8080
